--- a/src/libseal/patch/Makefile.sgx.patch
+++ b/src/libseal/patch/Makefile.sgx.patch
@@ -152,7 +152,7 @@
 -	@echo "LINK =>  $(Enclave_Name)"
 -
 -signed_enclave: enclave
--	@$(SGX_ENCLAVE_SIGNER) sign -key enclave_private.pem -enclave $(Enclave_Name) -out $(Signed_Enclave_Name) -config $(Enclave_Config_File)
+-	@$(SGX_ENCLAVE_SIGNER) sign -ignore-init-sec-error -key enclave_private.pem -enclave $(Enclave_Name) -out $(Signed_Enclave_Name) -config $(Enclave_Config_File)
 -	@echo "SIGN =>  $(Signed_Enclave_Name)"
 -	@rm $(Enclave_Name)
 +mcservice.o: mcservice.c 
